name:                nyaa
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GAumala/nyaa.hs#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Aumala
maintainer:          example@example.com
copyright:           2017 Gabriel Aumala
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Html
                     , Http
  build-depends:       base >= 4.7 && < 5
                     , tagsoup
                     , http-conduit
                     , http-client
                     , http-client-tls
                     , bytestring
  default-language:    Haskell2010

executable nyaa
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nyaa
  default-language:    Haskell2010

test-suite nyaa-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nyaa
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GAumala/nyaa.hs
